<resources>
    <string name="app_name">Product\nManagement\nAssiastant</string>
    <string name="welcomeScreen">Вход в аккаунт</string>
    <string name="TextToScanning">Отсканировать товар</string>
    <string name="OpenDataBase">Найти информацию о товаре</string>
    <string name="log">Журнал действий</string>
    <string name="back">Назад</string>
    <string name="loading">Загрузка...</string>
    <string name="textDuringScanning">Наведите камеру на штрих или qr код</string>

    <string name="fullName">ФИО</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="helloNewPeople">Введите данные нового пользователя</string>
    <string name="logOut"><u>Выйти</u></string>
    <string name="signIn">Войти</string>
    <string name="signUpGo"><u>Еще не зарегистрированы?</u></string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="signInGo"><u>Уже зарегистрированы?</u></string>

    <string name="onWarehouse">Отправить на склад</string>
    <string name="forRepairs">Отправить в ремонт</string>
    <string name="issue">Выдать товар</string>
    <string name="reason">Причина поломки</string>
    <string name="arrived">Товар только прибыл</string>
    <string name="warehouse">Товар находится на складе</string>
    <string name="repair">Товар находится в ремонте</string>
    <string name="issued">Товар был выдан</string>
    <string name="addNew">Добавить новый товар</string>
    <string name="replace">Переместить имеющийся</string>
    <string name="choiceProduct">Выберете товар:</string>

    <string name="place">Место товара:</string>
    <string name="change">Последнее изменение:</string>
    <string name="timeChange">Время последнего изменения:</string>
    <string name="whoChange">Изменение внес:</string>
    <string name="reasonRep">Причина ремонта:</string>
    <string name="countAvail">Количество товара имеющееся: </string>
    <string name="countReplace">Сколько хотите переместить:</string>
    <string name="countAdd">Сколько товаара хотите добавить:</string>
    <string name="count">Количество товара:</string>
    <string name="wherePut">Введите, куда поместить товар</string>

    <string name="whatInput">Введите полное имя человека или название товара</string>
    <string name="found">Вывести журнал логов</string>
    <string name="scanning">Отсканировать товар</string>
</resources>