<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainMenuActivity"
android:orientation="vertical"
android:gravity="center_horizontal"
android:background="@color/background">

    <TextView
        android:id="@+id/fullName"
        android:textSize="20sp"
        android:text="@string/loading"
        android:paddingEnd="20dp"
        android:paddingStart="10dp"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/textStyleTitle"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        />

    <Button
        android:id="@+id/goToScanning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextToScanning"
        android:layout_marginHorizontal="30dp"
        android:textSize="25sp"
        android:background="@drawable/shape_button"
        android:padding="20dp"
        >
    </Button>

    <Button
        android:id="@+id/openList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/OpenDataBase"
        android:layout_marginHorizontal="30dp"
        android:textSize="25sp"
        android:background="@drawable/shape_button"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        >
    </Button>

</LinearLayout>