<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:gravity="center_horizontal"
    android:background="@color/background">

    <TextView
        android:id="@+id/titleText"
        style="@style/textStyleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helloNewPeople"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="20dp"
        android:gravity="center_horizontal"

        android:layout_marginTop="100dp"
        />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_for_text"
        android:textSize="27sp"
        android:inputType="textEmailAddress"
        android:hint="@string/fullName"

        android:gravity="center"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="90dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_for_text"
        android:textSize="27sp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"

        android:gravity="center"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_for_text"
        android:textSize="27sp"
        android:inputType="textPassword"
        android:hint="@string/password"

        android:gravity="center"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/shape_button"
        android:text="@string/signUp"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"

        android:layout_marginTop="70dp"
        />

    <Button
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:background="#00FFFFFF"
        android:text="@string/signInGo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp"
        android:layout_marginTop="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>