<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MoveTheProductActivity"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <Button
        android:id="@+id/backToMenu"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:background="@drawable/shape_button"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp">
    </Button>

    <TextView
        android:id="@+id/nameProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        style="@style/textStyleTitle"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal">
    </TextView>

    <TextView
        android:id="@+id/placeProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        style="@style/textStyle"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        style="@style/textStyle"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal">
    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp">


        <Button
            android:id="@+id/minus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/minus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="100dp">
        </Button>

        <EditText
            android:id="@+id/count"
            android:layout_width="60dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toEndOf="@id/minus"
            app:layout_constraintEnd_toStartOf="@id/plus"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/textStyle"
            android:textSize="20sp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            android:inputType="number"
            android:text="1"
            />

        <Button
            android:id="@+id/plus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="100dp">
        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:background="@drawable/shape_button"
        android:text="@string/onWarehouse"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
    </Button>

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:background="@drawable/shape_button"
        android:text="@string/forRepairs"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">
    </Button>

    <EditText
        android:id="@+id/reason"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/reason"
        android:layout_marginTop="50dp"
        style="@style/textStyle"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        android:layout_marginBottom="50dp"
        />


</LinearLayout>
</ScrollView>