<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoTheProductActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <Button
        android:id="@+id/backToMenu"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:background="@drawable/shape_button"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        style="@style/textStyleTitle"
        >
    </Button>

    <TextView
        android:id="@+id/nameProduct"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/loading"
        style="@style/textStyleTitle"
        android:layout_marginTop="80dp"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal">
    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">

        <TextView
            android:id="@+id/place"
            style="@style/textStyle"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="@string/place"
            android:textSize="26sp"
            android:background="@color/color2"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/placeProduct"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/place"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/change"
            style="@style/textStyle"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="@string/change"
            android:textSize="26sp"
            android:background="@color/color2"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/changeProduct"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/loading"
            app:layout_constraintTop_toBottomOf="@id/change"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/timeChangeProduct"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            app:layout_constraintTop_toBottomOf="@id/changeProduct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/whoChangeProduct"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            app:layout_constraintTop_toBottomOf="@id/timeChangeProduct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:id="@+id/reason"
        android:visibility="invisible">

        <TextView
            android:id="@+id/reasonRepair"
            style="@style/textStyle"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="@string/reasonRep"
            android:background="@color/color2"
            android:gravity="center"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/reasonRepairProduct"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/reasonRepair"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>